--- a/src/classes/ClassName1_Test.cls
+++ b/src/classes/ClassName1_Test.cls
@@ -2,8 +2,10 @@
 private class ClassName1_Test {
 	
 	@isTest static void test_method_one() {
-        Integer testNum = 90;
-        system.assertEquals(90, testNum);//This Fails the test class	
-        ClassName1 cn1 = new ClassName1();
+        Integer testNum = 91;
+        //This can Pass or Fail the test class
+        system.assertEquals(90, testNum);	
+        //This covers the ClassName1 class code coverage 
+        //ClassName1 cn1 = new ClassName1();
 	}	
 }
