--- a/src/classes/ClassName1_Test.cls
+++ b/src/classes/ClassName1_Test.cls
@@ -6,6 +6,6 @@ private class ClassName1_Test {
         //This can Pass or Fail the test class
         //system.assertEquals(90, testNum);	
         //This covers the ClassName1 class code coverage 
-        //ClassName1 cn1 = new ClassName1();
+        ClassName1 cn1 = new ClassName1();
 	}	
 }
